# my_pycentral_project

./: README.md  clients.json  pyproject.toml
.github/skills/rest-api/: SKILL.md
src/my_project/: __init__.py  __main__.py  client_snr.py  token.yaml
tests/: test_client_snr.py  test_my_project.py
